scss/common/_topic-post.scss
/* ... */
.post-menu-area {
  margin-top: $card-inner-spacer-y;
  margin-bottom: $card-inner-spacer-y;
}

.posts-wrapper {
  margin-bottom: ($spacer-lg - $card-margin-y);
}

.read-state {
  font-size: $font-size-base;
  height: $material-icon-size;
  line-height: $material-icon-size;
  top: 0;
  right: 0;
}

.small-action {
  @extend %card;
  @extend %card-block;

  border-top: 0;
  margin-bottom: $card-margin-y;
  position: relative;
  width: $topic-body-width;

  &.time-gap {
    background-color: transparent;
    box-shadow: none;
    padding: $card-margin-y 0 0;
  }

  button {
    @extend %btn-flat;

    color: color-chooser($white-secondary, $black-secondary);
    font-size: $btn-font-size-sm;
    margin-top: (($btn-height-sm - $font-size-base * $line-height-base) / -2);
    margin-bottom: (($btn-height-sm - $font-size-base * $line-height-base) / -2);
    padding: $btn-padding-y-sm $card-inner-spacer-x;

    &:first-child {
      margin-right: ($card-inner-spacer-x * -1);
    }
  }

  .small-action-desc {
    @extend %typography-h6;

    color: color-chooser($white-secondary, $black-secondary);
    margin-top: 0;
    padding: 0 0 0 ($card-inner-spacer-x * 2);
    text-transform: none;

    &.timegap {
      color: color-chooser($white-secondary, $black-secondary);
      display: block;
    }

    > p {
      line-height: 1;
      margin-right: auto;
      overflow: hidden;
      padding: 0 $card-inner-spacer-x 0 0;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .avatar {
      height: $material-icon-size;
      margin-right: $card-inner-spacer-x;
      width: $material-icon-size;
    }

    .custom-message {
      font-size: inherit;
      margin-top: ($card-inner-spacer-y / 2);
      width: 100%;
    }

    .trigger-user-card ~ .custom-message {
      padding-left: ($card-inner-spacer-x + $material-icon-size);
    }
  }

  .topic-avatar {
    margin-top: (($material-icon-size - $font-size-base * $line-height-base) / 2);
    margin-right: 0;
    padding: 0;
    position: static;
    width: auto;

    .fa {
      color: color-chooser($white-secondary, $black-secondary);
      width: auto;
    }
  }
}

.topic-avatar {
  border: 0;
  padding: 0;
  position: absolute;
  top: $card-padding-y;
  left: $card-padding-x;
  width: $card-avatar-size;

  .avatar {
    height: $card-avatar-size;
    width: $card-avatar-size;
  }
}

.topic-body {
  @extend %card;

  float: none;
  margin-bottom: $card-margin-y;

  @media (max-width: 870px) {
    width: auto;
  }

  .actions .fade-out {
    .discourse-no-touch & {
      opacity: 1;
    }
  }

  .cooked img:not(.thumbnail) {
    max-width: 100%;
  }

  .regular {
    @extend %card-block;

    margin: 0;
    padding-bottom: 0;

    > :first-child {
      margin-top: 0;
    }

    > :last-child {
      margin-bottom: 0;
    }
  }

  .reply-to-tab {
    margin: 0 $card-inner-spacer-x 0 0;

    .avatar {
      height: ($font-size-base * $line-height-base);
      width: ($font-size-base * $line-height-base);
    }
  }
}

#topic-footer-buttons {
  align-items: flex-start;
  display: flex;
  flex-wrap: wrap;
  margin-bottom: ($spacer-lg - $card-margin-y);
  max-width: ($card-margin-x + $topic-body-width);
  padding: 0;
  width: 100%;

  div > button,
  span > button,
  > button {
    &.btn {
      @extend %btn-raised;
      margin: 0 $card-margin-x $card-margin-y 0;
      max-width: ($topic-body-width / 3);
    }
  }

  p {
    margin-bottom: $card-margin-y;
    vertical-align: middle;
  }

  span > button,
  > button {
    &.btn {
      flex-basis: 0;
      flex-grow: 1;
    }
  }

  > div {
    align-items: flex-start;
    display: flex;
    flex-basis: 0;
    flex-grow: 1;
    margin-right: $card-margin-x;
  }

  .btn {
    margin: 0;
  }

  .dropdown-menu {
    @extend %dropdown-menu-sm;

    a {
      @extend %dropdown-link-sm;
    }
  }

  .fa {
    opacity: 1;
  }

  .popup-menu {
    @extend %dropdown-menu-sm;

    h3 {
      @extend %dropdown-header-sm;
    }

    .btn {
      @extend %dropdown-link-sm;
    }
  }

  .topic-notifications-button {
    min-width: 100%;

    .reason {
      line-height: $line-height-base;
      margin-top: (($btn-height - $font-size-base * $line-height-base) / 2);
      margin-bottom: 0;
      margin-left: $card-margin-x;
    }
  }
}

.topic-footer-main-buttons {
  flex-wrap: wrap;
}
/* ... */

